demo/kuma-demo-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kuma-demo
  namespace: kuma-demo
spec:
  tls: {}
  entryPoints:
    - websecure
  routes:
  - match: HostRegexp(`kuma-demo.{domain:.+}`)
    kind: Rule
    services:
    - name: frontend
      port: 8080
    middlewares:
      - name: traefik-forward-auth
